# RustWebExample

./: .gitignore  Cargo.toml  README.md  setup.sql  total_rust_lines.txt
admission/: Cargo.toml  setup.sql
admission/src/: hospital_services.rs  json.rs  main.rs  patient_services.rs  remote_complement_provider.rs  routes.rs  user_services.rs
admission/src/authentication/: jwt.rs  mod.rs  openid.rs
admission/src/core/: hospital_models.rs  hospital_repository.rs  hospital_services.rs  mod.rs  service_provider.rs  users.rs
admission/src/database/: database_group_repository.rs  database_hospital_repository.rs  database_patient_repository.rs  helpers.rs  mod.rs  pool.rs
admission/src/infrastructure/: mod.rs  routes.rs
census/: Cargo.toml
census/src/: api_consumer.rs  census.rs  http_client.rs  main.rs
common/: Cargo.toml
common/src/: complement_service.rs  hospital.rs  hospital_names.rs  http_client.rs  lib.rs  patient.rs  patients.rs  user.rs
complement/: Cargo.toml  README.md
complement/src/: main.rs
front-end/: Program.cs  front-end.csproj
front-end/Models/: AdmissionStatus.cs  AdmittedTo.cs  Hospital.cs  LoginRequest.cs  Patient.cs  User.cs
front-end/Pages/: Error.cshtml.cs  Hospitals.cshtml  Hospitals.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  Waitlist.cshtml  Waitlist.cshtml.cs
front-end/Properties/: launchSettings.json
front-end/Services/: AdmissionsClient.cs
src/: main.rs  temp.rs
src/controllers/: anchor_controller.rs  forecast_controller.rs  mod.rs
src/core/: auth.rs  configuration.rs  hospital_models.rs  hospital_repository.rs  hospital_services.rs  mod.rs  service_provider.rs  users.rs
src/core/models/: anchor.rs
src/infrastructure/: anchor_routes.rs  mod.rs  routes.rs
src/models/: anchor.rs  forecast.rs  mod.rs
src/repositories/: anchor_repository.rs  in_memory_anchor_repository.rs  mod.rs
src/services/: anchor_service.rs  forecast_service.rs  mod.rs  service_provider.rs
tests/: database_integration_tests.rs
unused/: http_client.rs  pool_does_not_work.rs
(+39 files in other folders)
