[package]
name = "rust_web_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tiberius = "0.11.3"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = "0.11.13"

# https://github.com/prisma/tiberius/issues/145#issuecomment-829044670
[dependencies.tokio-util]
version = "0.6"
features = ["compat"]

[dev-dependencies]
mockall = "0.11.3"
