[package]
name = "complement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
actix-web = "4.3.0"
async-trait = "0.1.64"
reqwest = { version = "0.11.14", features = ["json"] }
